--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body
     color: #989C94; 
 }
 
+main{
+margin-top: 70px;    
+}
+
 h1{
     color: #E3E7D3; 
 }
@@ -45,6 +49,13 @@ footer{
     border-width: 2px;
     border-radius: 2px;
     padding: 20px;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 60px;
+    /* margin: 10px; */
+    box-sizing: border-box;
 }
 
 .box-picturetext{
@@ -53,6 +64,7 @@ footer{
     border-width: 1px;
     border-radius: 2px;
     padding: 20px;
+    margin: 0 auto;
 }
 
 .box-picturetext-picture{
@@ -70,8 +82,54 @@ footer{
 }
 
 .box-electronica-content{
-    width: 50%;
+    /* width: 50%; */
     padding: 20px 20%;
-
+    margin: 0 auto;
 }
+
+.box-investment-experience
+{
+    border-style: solid;
+    border-width: 1px;
+    border-color: #FA9F42;
+    width: 20%;
+    height: 200px;
+    /* padding: 10px; */
+    display: inline-block;
+    min-width: 200px;
+    box-sizing: border-box;
+}
+
+.box-investment-experience-bar
+{
+    background-color: rgb(184, 76, 13);
+    color: rgb(248, 195, 97);
+    width: 100%;
+    height: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-sizing: border-box;  
+}
+
+.box-invetments-goldenrules
+{
+    background-color: rgb(105, 64, 11);
+    margin: 20px 20px 20px 0px;
+    padding: 20px;
+    height: 300px;
+    position: relative;
+}
+
+
+.box-investment-goldenrule
+{
+    border-style: solid;
+    border-width: 1px;
+    border-color: #FA9F42;
+    width: 200px;
+    /* margin: 10px; */
+    padding: 10px;
+    position: absolute;
+}
+
 
