--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h5 {
   color: rgb(204, 145, 19);
 }
 
-a {
+/* a {
   color: rgb(35, 170, 242);
 }
 
@@ -23,6 +23,16 @@ nav a {
   color: #989c94;
   padding-left: 10px;
   padding-right: 10px;
+} */
+
+.navi__link{
+  color: #989c94;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.navi__link--red{
+  color: #e2491b;
 }
 
 footer {
@@ -37,7 +47,7 @@ footer {
   /* background-color: khaki; */
 }
 
-.navi-box {
+.navi {
   background: #090c02;
   border-color: #a72608;
   border-style: solid;
@@ -82,7 +92,7 @@ footer {
   margin: 0 auto;
 }
 
-.box-investment-experience {
+.investment-experience__box {
   border-style: solid;
   border-width: 1px;
   border-color: #fa9f42;
@@ -92,9 +102,10 @@ footer {
   display: inline-block;
   min-width: 200px;
   box-sizing: border-box;
+  margin-top: 10px;
 }
 
-.box-investment-experience-bar {
+.investment-experience__box__bar {
   background-color: rgb(184, 76, 13);
   color: rgb(248, 195, 97);
   width: 100%;
@@ -104,7 +115,7 @@ footer {
   box-sizing: border-box;
 }
 
-.box-invetments-goldenrules {
+.investment-goldenrules {
   background-color: rgb(105, 64, 11);
   margin: 20px 20px 20px 0px;
   padding: 20px;
@@ -112,21 +123,29 @@ footer {
   position: relative;
 }
 
-.box-investment-goldenrule {
+.investment-goldenrule__box {
   border-style: solid;
   border-width: 1px;
   border-color: #fa9f42;
   width: 200px;
   /* margin: 10px; */
   padding: 10px;
+  background: rgb(7, 88, 41);
+  z-index: 99;
   position: absolute;
 }
 
+.investment-goldenrule__box--red{
+  background: rgb(151, 8, 51);
+  z-index: 100;
+}
+
+
 .box-mysticky1 {
-  color: rgb(248, 195, 97);
+  color: rgb(114, 110, 103);
   background-color: #080808;
   border-style: outset;
-  border-width: 2px;
+  border-width: 1px;
   border-color: rgb(248, 195, 97);
   width: 100%;
   height: 20px;
@@ -140,3 +159,16 @@ footer {
   float: left;
   height: 100px;
 }
+
+.wtf_frontend__lesson{
+  background-color: #3b3831;
+  border-style: outset;
+  border-width: 1px;
+  border-color: rgb(248, 195, 97);
+  padding-left: 20px;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  
+}
+
