DOM & Update content with lesson4

--- a/style.css
+++ b/style.css
@@ -172,3 +172,11 @@ footer {
   
 }
 
+.investment-experience__box__content--akcgpw-js{
+  color: white;
+}
+/* .investment-experience__box__content{
+  color:  #664b0b;
+
+} */
+
