--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html{
+  box-sizing: border-box;
+}
+
+*, *:before, *:after{
+  box-sizing: inherit;
+}
+
 body {
   background-color: #2b2b29;
   color: #989c94;
