--- a/style.css
+++ b/style.css
@@ -67,8 +67,11 @@ footer {
   top: 0px;
   width: 100%;
   height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   /* margin: 10px; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 .box-picturetext {
