--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@ html{
 
 body {
   background-color: #2b2b29;
+  background: linear-gradient(175deg, rgba(2,0,36,1) 0%, rgba(9,92,121,0.938813025210084) 64%, rgba(0,212,255,1) 100%);
   color: #989c94;
+  padding-left: 20px;
 }
 
 main {
   margin-top: 70px;
+  min-height: 100vh;
 }
 
 h1 {
