--- a/style.css
+++ b/style.css
@@ -283,6 +283,26 @@ footer {
   z-index: 10;
 }
 
+.mygrid_container{
+  display: grid;
+  background-color: #ebdbcb;
+  grid-gap: 2px;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 100px 100px 100px 100px;
+}
+
+.mygrid_item1{
+  background-color: rgb(197, 63, 103);
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.mygrid_item2{
+  background-color: rgb(197, 63, 103);
+  grid-column: 3;
+  grid-row: 3;
+}
+
 
 @media screen and (max-width: 778px){
   .navi {
