--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,14 @@ html{
     min-height: 100vh;
   }
 
+  h1 {
+    color: #e3e7d3;
+  }
+  
+  h5 {
+    color: rgb(204, 145, 19);
+  }
+
   /* my sass update */
   .main {
     margin-top: 70px;
@@ -61,6 +69,11 @@ html{
         &__myhouse__gridheader--ourwork{
             grid-area: header2;
             }
+        
+            
+        &__myhouse__gridheader--orderedwork{
+            grid-area: header3;
+            }
 
         &__myhouse__article__ourwork{
             grid-area: article-left;
@@ -84,46 +97,58 @@ html{
     .main{
         &--shiftsmall--js {
             margin-top: 25px;
-
         }
-
         &--shiftlarge--js {
             margin-top: 160px;
         }
+    }    
+
+        
     }  
-}
+
+    .index{
+        &__heading::before{
+        content: 'START... ';
+        }
+    
+        &__heading::after{
+        content: ' ...FINISH';
+      }
+    }
+
+    .navi{
+        background: #090c02;
+        border-color: #a72608;
+        border-style: solid;
+        border-width: 2px;
+        border-radius: 2px;
+        padding: 20px;
+        position: fixed;
+        left: 0px;
+        top: 0px;
+        width: 100%;
+        height: 60px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        /* margin: 10px; */
+        /* box-sizing: border-box; */
+        &__link{
+            color: #989c94;
+            padding-left: 10px;
+            padding-right: 10px;
+                &--red{
+                    color: #e2491b;
+                }
+
+                &:hover{
+                background-color: rgb(0, 225, 255);
+                }
+            }           
+    }
 
 /* end of my sass update */
 
-  h1 {
-    color: #e3e7d3;
-  }
-  
-  h5 {
-    color: rgb(204, 145, 19);
-  }
-  
-  .index__heading::before{
-    content: 'START... ';
-  }
-  
-  .index__heading::after{
-    content: ' ...FINISH';
-  }
-  
-  .navi__link{
-    color: #989c94;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-  
-  .navi__link--red{
-    color: #e2491b;
-  }
-  
-  .navi__link:hover{
-    background-color: rgb(0, 255, 34);
-  }
   
   footer {
     padding-top: 20px;
@@ -137,24 +162,6 @@ html{
     /* background-color: khaki; */
   }
   
-  .navi {
-    background: #090c02;
-    border-color: #a72608;
-    border-style: solid;
-    border-width: 2px;
-    border-radius: 2px;
-    padding: 20px;
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 60px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    /* margin: 10px; */
-    /* box-sizing: border-box; */
-  }
   
   .box-picturetext {
     display: inline-block;
@@ -295,26 +302,26 @@ html{
     z-index: 10;
   }
   
-  .mygrid_container{
-    display: grid;
-    background-color: #ebdbcb;
-    grid-gap: 2px;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 100px 100px 100px 100px;
+  .mygrid{
+      &_container{
+        display: grid;
+        background-color: #ebdbcb;
+        grid-gap: 2px;
+        grid-template-columns: 25% 25% 25% 25%;
+        grid-template-rows: 100px 100px 100px 100px;
+      }
+      &_item1{
+        background-color: rgb(197, 63, 103);
+        grid-column: 1;
+        grid-row: 2;
+      }
+      &_item2{
+        background-color: rgb(197, 63, 103);
+        grid-column: 3;
+        grid-row: 3;
+      }
   }
-  
-  .mygrid_item1{
-    background-color: rgb(197, 63, 103);
-    grid-column: 1;
-    grid-row: 2;
-  }
-  
-  .mygrid_item2{
-    background-color: rgb(197, 63, 103);
-    grid-column: 3;
-    grid-row: 3;
-  }
-  
+ 
   
   @media screen and (max-width: 778px){
     .navi {
@@ -340,18 +347,21 @@ html{
       flex-direction: row;
       justify-content: center;
       */
+
+      &--open--js{
+        display: block;
+      }
+      &__link{
+        /*width: 100%;*/
+        display: block;
+      }
     }
   
-    .navi--open--js{
-      display: block;
-    }
-  
-    .navi__link{
-      /*width: 100%;*/
-      display: block;
-    }
-  
-    
+    .btnHamburger{
+        display: block;
+        
+      }
+      
     }
   
     /*
@@ -361,10 +371,7 @@ html{
     */
     
   
-    .btnHamburger{
-      display: block;
-      
-    }
+    
 
   
   
